--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		  <section class="about-me" id="contact">
 			<div class="container">
 			  <div class="contact-box">
-				<form id="form" action="/thanks.html" method="POST">
+				<form id="form" action="https://formsubmit.co/598a3d4bff6ad29a665adb5958d56b32" method="POST">
 				  <h1 id="contact-me">/contact me</h1>
 				  <label for="name"></label>
 				  <input type="text" id="name" name="fullname" placeholder="Full Name" required="" fdprocessedid="bqgx1a">
