--- a/thanks.html
+++ b/thanks.html
@@ -44,7 +44,7 @@
           }
         }
       </style>
-      <title>Thanks!</title>
+      <title>Document</title>
     </head>
     <body cz-shortcut-listen="true">
         <section class="about-me" id="about">
@@ -52,7 +52,7 @@
           <div id="thanks" class="container">
             <div class="aboutdesc">
               <p>I hope to be in touch shortly! <br><br></p>
-              <form id="thanksform" action="https://www.hamzashar.com/">
+              <form id="thanksform" action="https://hamzashar.com/#">
                 <input type="submit" value="Return Back">
               </form>
             </div>
