--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				</p>
 			  </div>
 			  <div class="baki">
-				<img src="Baki.gif" alt="Picture of my favourite anime!">
+				<img src="face.gif" alt="Picture of my favourite anime!">
 			  </div>
 			</div>
 		  </section>
