--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
 	<title>Spin</title>
+	<link rel="icon" href="image/Icon.png">
 </head>
 <body>
 	<body cz-shortcut-listen="true">
@@ -110,7 +111,7 @@
 				</p>
 			  </div>
 			  <div class="baki">
-				<img src="face.gif" alt="Picture of my favourite anime!">
+				<img src="baki.gif" alt="Picture of my favourite anime!">
 			  </div>
 			</div>
 		  </section>
