--- a/thanks.html
+++ b/thanks.html
@@ -47,7 +47,8 @@
         }
       }
     </style>
-    <title>Document</title>
+    <title>Thanks!</title>
+    <link rel="icon" href="image/Icon.png">
   </head>
   <body>
     <section class="about-me" id="about">
