--- a/setup.html
+++ b/setup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="index.html">
     <title>Setup</title>
+    <link rel="icon" href="image/Icon.png">
 </head>
 <body cz-shortcut-listen="true">
   <section class="about-me" id="about">
