--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="container">
 			  <div class="aboutdesc">
 				<br>
-				<p>Here are My discord, video games Nickname:</p>
+				<p>Here are My discord & video games Nickname:</p>
 				<ul class="tech-stack" id="stack">
 				  <li>Discord: Spin#6666</li>
 				  <li>Fortnite: Spin6666</li>
