--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 			</div>
 			<a href="mailto:hamza.yahya608@gmail.com" class="intro-contact">Email Me</a>
 			<div class="social-mobile">
-			  <a class="links" href="https://github.com/arafatiqbal"><i class="bi bi-github"></i></a>
-			  <a class="links" href="https://www.linkedin.com/in/arafat-iqbal/"><i class="bi bi-linkedin"></i></a>
-			  <a class="links" href="https://www.tiktok.com/@arafat.iq"><i class="bi bi-tiktok"></i></a>
-			  <a class="links" href="https://www.instagram.com/shotbyarafat/"><i class="bi bi-instagram"></i>
+			  <a class="links" href="https://xero.gg/player/spin"><i class="bi bi-Xero"></i></a>
+			  <a class="links" href="https://www.instagram.com/hamza.yahyaa/"><i class="bi bi-instagram"></i></a>
+			  <a class="links" href="https://www.tiktok.com/@jij.iq"><i class="bi bi-tiktok"></i></a>
+			  <a class="links" href="/index.html"><i class="bi bi-"></i>
 			  </a>
 			</div>
 		  </section>
@@ -90,14 +90,15 @@
 			<div class="container">
 			  <div class="aboutdesc">
 				<br>
-				<p>Here are My discord, video games Nickname:</p>
+				<p>Here are my Discord & video game nicknames:</p>
 				<ul class="tech-stack" id="stack">
-				  <li>Discord: Spin#6666</li>
-				  <li>Fortnite: Spin6666</li>
-				  <li>Valorant: Spin#6666</li>
-				  <li></li>
-				  <li></li>
-				  <li> &amp; </li>
+				  <li>Dis: Spin#6666</li>
+				  <li>Fort: Spin6666</li>
+				  <li>Valo: Spin#6666</li>
+				  <li>COD: Spin#11668 </li>
+				  <li>Xero: Spin</li>
+				  <div class="Xero">   ;^) <a href="https://xero.gg/player/spin">Spin</a></div>
+				  
 				</ul>
 				<p>
 				  Outside of work I enjoy palying soccer, working out, watching anime, and and I also like playing
@@ -107,7 +108,13 @@
 				<p>
 				  
 				  <br>
-				  <a href="setup.html">Desk Setup Links</a>
+				  <div class="setup_discord">
+					<a href="setup.html">Desk Setup Links</a>
+					<br>
+					<br>
+					<a href="https://discord.gg/3QnzhVF2">My discord server</a>
+					<br>
+				  </div>
 				</p>
 			  </div>
 			  <div class="baki">
@@ -263,10 +270,10 @@
 			<a href="setup.html">/setup + store</a>
 			<a href="#contact">/contact me</a>
 			<div class="social">
-			  <a class="links" href="https://github.com/arafatiqbal"><i class="bi bi-github"></i></a>
-			  <a class="links" href="https://www.linkedin.com/in/arafat-iqbal/"><i class="bi bi-linkedin"></i></a>
-			  <a class="links" href="https://www.tiktok.com/@arafat.iq"><i class="bi bi-tiktok"></i></a>
-			  <a class="links" href="https://www.instagram.com/shotbyarafat/"><i class="bi bi-instagram"></i>
+			  <a class="links" href="https://xero.gg/player/spin"><i class="bi bi-Xero"></i></a>
+			  <a class="links" href="https://www.instagram.com/hamza.yahyaa/"><i class="bi bi-linkedin"></i></a>
+			  <a class="links" href="https://www.tiktok.com/@jij.iq"><i class="bi bi-tiktok"></i></a>
+			  <a class="links" href="https://www.instagram.com/hamza.yahyaa/"><i class="bi bi-instagram"></i>
 			  </a>
 			</div>
 		  </nav>
