--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 				</div>
 				<h1 class="intro-title">
 				  <span class="text-wrapper">
-					<span class="letter" style="transform: translateY(0em) translateX(0em) translateZ(0px) rotateZ(0deg);">hi, i'm <span class="name">hamza</span></span>
+					<span class="letter" style="transform: translateY(0em) translateX(0em) translateZ(0px) rotateZ(0deg);">
+						"hi, i'm "
+						<span class="name">hamza</span></span>
 				  </span>
 				</h1>
 				<h2 class="intro-sub">i code and design things</h2>
@@ -90,9 +92,9 @@
 			<div class="container">
 			  <div class="aboutdesc">
 				<br>
-				<p>Here are My discord & video games Nickname:</p>
+				<p>Here are my Discord & video game nicknames.:</p>
 				<ul class="tech-stack" id="stack">
-				  <li>Dis: Spin#6666</li>
+				  <li>Disc: Spin#6666</li>
 				  <li>Fort: Spin6666</li>
 				  <li>Valo: Spin#6666</li>
 				  <li>COD: Spin#11668 </li>
@@ -101,7 +103,7 @@
 				  
 				</ul>
 				<p>
-				  Outside of work I enjoy palying soccer, working out, watching anime, and and I also like playing
+				  Outside of work I enjoy palying soccer, working out, watching anime, and I also like playing
 				  video games.!
 				</p>
 				<br>
@@ -273,7 +275,7 @@
 			  <a class="links" href="https://xero.gg/player/spin"><i class="bi bi-Xero"></i></a>
 			  <a class="links" href="https://www.instagram.com/hamza.yahyaa/"><i class="bi bi-linkedin"></i></a>
 			  <a class="links" href="https://www.tiktok.com/@jij.iq"><i class="bi bi-tiktok"></i></a>
-			  <a class="links" href="https://www.instagram.com/hamza.yahyaa/"><i class="bi bi-instagram"></i>
+			  <a class="links" href="/index.html"><i class="bi bi-instagram"></i>
 			  </a>
 			</div>
 		  </nav>
