Upgrade #about_me
First upgrade #about me.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,40 @@
 		  <!-- About Me -->
 		  <section class="about-me" id="about">
 			<h1>/about me</h1>
+			<div class="container">
+			  <div class="aboutdesc">
+				<br>
+				<p>Here are my Discord & video game nicknames.:</p>
+				<ul class="tech-stack" id="stack">
+				  <li>Disc: Spin#6666</li>
+				  <li>Fort: Spin6666</li>
+				  <li>Valo: Spin#6666</li>
+				  <li>COD: Spin#11668 </li>
+				  <li>Xero: Spin</li>
+				  <div class="Xero">   ;^) <a href="https://xero.gg/player/spin">Spin</a></div>
+				  
+				</ul>
+				<p>
+				  Outside of work I enjoy palying soccer, working out, watching anime & movies, and I also like playing
+				  video games!
+				</p>
+				<br>
+				<p>
+				  
+				  <br>
+				  <div class="setup_discord">
+					<a href="setup.html">Desk Setup Links</a>
+					<br>
+					<br>
+					<a href="https://discord.gg/3QnzhVF2">My discord server</a>
+					<br>
+				  </div>
+				</p>
+			  </div>
+			  <div class="baki">
+				<img src="baki.gif" alt="Picture of my favourite anime!">
+			  </div>
+			</div>
 		  </section>
 	
 		  <!-- Projects -->
