--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 				  
 				</ul>
 				<p>
-				  Outside of work I enjoy palying soccer, working out, watching anime & movies, and I also like playing
+				  Outside of work I enjoy playing soccer, working out, watching anime & movies, and I also like playing
 				  video games!
 				</p>
 				<br>
