--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div class="container">
 			  <div class="aboutdesc">
 				<br>
-				<p>Here are my Discord & video game nicknames.:</p>
+				<p>Here are my Discord & video game nicknames:</p>
 				<ul class="tech-stack" id="stack">
 				  <li>Disc: Spin#6666</li>
 				  <li>Fort: Spin6666</li>
