--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				  <span class="text-wrapper">
 					<span class="letter" style="transform: translateY(0em) translateX(0em) translateZ(0px) rotateZ(0deg);">
 						hi, i'm 
-						<span class="name">hamza</span></span>
+						<span class="name">omar</span></span>
 				  </span>
 				</h1>
 				<h2 class="intro-sub">i code and design things</h2>
