--- a/setup.html
+++ b/setup.html
@@ -34,9 +34,14 @@
     </div>
   </section>
 
-
-    </div>
-  </nav>
+  <nav class="nav">
+    <a href="index.html">/home</a>
+    <a href="index.html#about">/about</a>
+    <a href="index.html#projects">/projects</a>
+    <a href="setup.html">/setup + store</a>
+    <a href="index.html#contact">/contact me</a>
+    <div class="social"></div>
+    </nav>
 
 
 </body>
