--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				  <span class="text-wrapper">
 					<span class="letter" style="transform: translateY(0em) translateX(0em) translateZ(0px) rotateZ(0deg);">
 						hi, i'm 
-						<span class="name">omar</span></span>
+						<span class="name">Hamza</span></span>
 				  </span>
 				</h1>
 				<h2 class="intro-sub">i code and design things</h2>
@@ -99,7 +99,7 @@
 				  <li>Valo: Spin#6666</li>
 				  <li>COD: Spin#11668 </li>
 				  <li>Xero: Spin</li>
-				  <div class="Xero">   ;^) <a href="https://xero.gg/player/spin">Spin</a></div>
+				  <div class="Xero"><a href="https://xero.gg/player/spin">;^)Spin</a></div>
 				 
 				</ul>
 				<p>
@@ -233,7 +233,14 @@
 			  <a href="/">Hamza</a></span>
 		  </div>
 		</div>
-	  
+	    <nav class="nav">
+			<a href="index.html">/home</a>
+			<a href="index.html#about">/about</a>
+			<a href="index.html#projects">/projects</a>
+			<a href="setup.html">/setup + store</a>
+			<a href="index.html#contact">/contact me</a>
+			<div class="social"></div>
+			</nav>
 	
 	</body>
 </body>
