--- a/setup.html
+++ b/setup.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="index.html">
     <title>Setup</title>
     <link rel="icon" href="image/Icon.png">
-</head>
-<body cz-shortcut-listen="true">
+  </head>
+  <body cz-shortcut-listen="true">
   <section class="about-me" id="about">
     <h1>/Setup Links</h1>
     <div id="thanks" class="container">
@@ -42,6 +42,5 @@
     <a href="index.html#contact">/contact me</a>
     <div class="social"></div>
     </nav>
-
-
-</body>
+  </body>
+</html>
