update Discord server link

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<a href="setup.html">Desk Setup Links</a>
 					<br>
 					<br>
-					<a href="https://discord.gg/3QnzhVF2">My discord server</a>
+					<a href="https://discord.gg/C5aGUhJaA2">My discord server</a>
 					<br>
 				  </div>
 				</p>
