fixed a few things #intro and removed ;^)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				  <li>Valo: Spin#6666</li>
 				  <li>COD: Spin#11668 </li>
 				  <li>Xero: Spin</li>
-				  <div class="Xero"><a href="https://xero.gg/player/spin">;^)Spin</a></div>
+				  <div class="Xero"><a href="https://xero.gg/player/spin">Spin</a></div>
 				 
 				</ul>
 				<p>
@@ -198,7 +198,7 @@
 		  </div>
 		</div>
 	    <nav class="nav">
-			<a href="index.html">/home</a>
+			<a href="index.html#intro">/home</a>
 			<a href="index.html#about">/about</a>
 			<a href="index.html#projects">/projects</a>
 			<a href="setup.html">/setup + store</a>
