--- a/setup.html
+++ b/setup.html
@@ -35,7 +35,7 @@
   </section>
 
   <nav class="nav">
-    <a href="index.html">/home</a>
+    <a href="index.html#intro">/home</a>
     <a href="index.html#about">/about</a>
     <a href="index.html#projects">/projects</a>
     <a href="setup.html">/setup + store</a>
