--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</h1>
 				<h2 class="intro-sub">i code and design things</h2>
 				<p class="intro-desc">
-					I want to be a computer science student based in Medicine Hat College. I'm interested in full-stack development, with hopes of becoming a software engineer.
+					I want to be a computer science student based in university of calgary. I'm interested in full-stack development, with hopes of becoming a software engineer.
 				</p>
 			  </div>
 				
