--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 			<div class="container">
 			  <div class="aboutdesc">
 				<br>
-				<p>Here are my Discord & video game nicknames:</p>
+				<p>Here are my Discord & video game names:</p>
 				<ul class="tech-stack" id="stack">
-				  <li>Disc: Spin#6666</li>
+				  <li>Disc: Spin6666</li>
 				  <li>Fort: Spin6666</li>
 				  <li>Valo: Spin#6666</li>
 				  <li>COD: Spin#11668 </li>
@@ -203,6 +203,7 @@
 			<a href="index.html#projects">/projects</a>
 			<a href="setup.html">/setup + store</a>
 			<a href="index.html#contact">/contact me</a>
+			<a href="/Sign in/signin.html">/sign in</a>
 			<div class="social"></div>
 			</nav>
 	
