--- a/setup.html
+++ b/setup.html
@@ -40,6 +40,7 @@
     <a href="index.html#projects">/projects</a>
     <a href="setup.html">/setup + store</a>
     <a href="index.html#contact">/contact me</a>
+    <a href="/Sign in/signin.html">/sign in</a>
     <div class="social"></div>
     </nav>
   </body>
