the next update
7/6/2023

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"
     ></script>
     <script defer src="script.js"></script>
-	<script> src="./script.js"></script>
+	<script>src="./script.js"</script>
 </head>
 <body>
 	<div class="everything"></div>
@@ -207,6 +207,7 @@
 			<a href="#about">/about</a>
 			<a href="#projects">/projects</a>
 			<a href="setup.html">/setup + store</a>
+			<a href="profile/profile.html">/Profile</a>
 			<a href="#contact">/contact me</a>
 
 			<div class="social"></div>
