--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 				  <div class="discord-setup"><a href="https://discord.gg/C5aGUhJaA2">My Discord Server</a></div>
 				  
 				  <div class="discord-setup"><a href="setup.html">Desk Setup Links</a>
+
+				  <div class="discord-setup"><a href="profile/profile.html">Profile</a></div>
 				  </div>
 				</p>
 			  </div>
