--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<span class="text-wrapper">
 							<span class="letter" style="transform: translateY(0em) translateX(0em) translateZ(0px) rotateZ(0deg);">
 								hi, i'm 
-								<span class="name">Hamza</span>
+								<span class="name">hamza</span>
 							</span>
 						</span>
 					</h1>
