--- a/setup.html
+++ b/setup.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="index.html">
     <title>Setup</title>
-    <link rel="icon" href="image/Icon.png">
+    <link rel="icon" href="/Images/icons/Icon.png">
   </head>
   <body cz-shortcut-listen="true">
   <section class="about-me" id="about">
@@ -21,26 +21,28 @@
           <a href="https://www.bestbuy.ca/en-ca/product/samsung-27-fhd-75hz-5ms-gtg-ips-led-freesync-gaming-monitor-lf27t350fhnxza-dark-blue-grey/14933348?source=search&asSlot=1">Monitor 2 - Side Monitor</a><br>
           <a href="https://www.amazon.ca/gp/product/B07T5SY43L/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&psc=1">Monitor Stand</a><br>
           <a href="https://www.amazon.ca/gp/product/B09H6Y3PRV/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Monitor Lamp</a><br>
-          <a href="https://ca.govee.com/collections/flash-deals/products/govee-glide-wall-light?variant=40521000321230">Govee Glide Lightbar</a><br>
+          
           <a href="https://www.amazon.ca/gp/product/B0B17KX7FX/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&th=1">Keyboard</a><br>
           <a href="https://www.amazon.ca/gp/product/B08FG4Q759/ref=ppx_yo_dt_b_asin_title_o05_s00?ie=UTF8&th=1">White Desk Mat</a><br>
           <a href="https://www.amazon.ca/dp/B075F9KPQH?psc=1&ref=ppx_yo2ov_dt_b_product_details">Desk</a><br>
           <a href="https://www.amazon.ca/Recliner-Computer-Footrest-Massage-Ergonomic/dp/B08R1F77KB/ref=sr_1_1?keywords=zeanus%2Bchair&qid=1672708366&sr=8-1&th=1">Chair </a><br>
           <a href="https://www.amazon.ca/gp/product/B082G5SPR5/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&th=1">Mouse</a><br>
+          <a href="https://www.amazon.ca/TONOR-Microphone-Computer-Condenser-Studio/dp/B07WLWN2ZT/ref=sr_1_6?crid=3U85YFDYSA3EJ&keywords=microphone%2Btonor&qid=1694056507&sprefix=microphone%2Btonor%2Caps%2C131&sr=8-6&th=1">microphone </a><br>
+          <a href="https://www.amazon.ca/InnoGear-Microphone-Suspension-Scissor-Snowball/dp/B01L3LL95O/ref=sr_1_3?crid=3H26JX41DFDV8&keywords=innogear+microphone+arm&qid=1694056187&sprefix=innogear+microphone+arm%2Caps%2C127&sr=8-3">microphone arm</a><br>
+          <a href="https://ca.govee.com/collections/flash-deals/products/govee-glide-wall-light?variant=40521000321230">Govee Glide Lightbar</a><br>
           <a href="https://www.apple.com/ipad-10.2/">Ipad 9th Gen - "I got first gen pen for it as well"</a><br>
+          <a href="https://gopro.com/en/ca/shop/cameras/hero11-black/CHDHX-111-master.html">GoPro 11Hero</a><br>
+          <a href="https://divoom.com/en-ca/products/pixoo-64"> Divoom</a><br>
           <br>
         </div>
       </div>
     </div>
-  </section>
-
+  </section>  
   <nav class="nav">
     <a href="index.html#intro">/home</a>
     <a href="index.html#about">/about</a>
+    <a href="setup.html">/setup</a>
     <a href="index.html#projects">/projects</a>
-    <a href="setup.html">/setup + store</a>
-    <a href="index.html#contact">/contact me</a>
-
     <div class="social"></div>
     </nav>
   </body>
