--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				
 				<!-- SVG of a Man -->
 				<div class="man">
-					<object data="Asset.svg" width="350" height="auto">
+					<object data="/Images/SVG/Asset/Man.svg" width="350" height="auto">
 						<svg width="565.94" height="625.01">
 						</svg>
 					</object>
