--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<span class="text-wrapper">
 							<span class="letter" style="transform: translateY(0em) translateX(0em) translateZ(0px) rotateZ(0deg);">
 								hi, i'm 
-								<span class="name">Hamza</span>
+								<span class="name">hamza</span>
 							</span>
 						</span>
 					</h1>
@@ -200,13 +200,14 @@
 			<span> All rights reserved ©</span>
 			<span>
 			  Built and Designed by
-			  <a href="/">Hamza</a></span>
+			  <a href="/">
+				<div class="name">hamza</div>
 		  </div>
 		  <nav class="nav">
-			<a href="index.html#intro">/home</a>
-			<a href="index.html#about">/about</a>
+			<a href="#intro">/home</a>
+			<a href="#about">/about</a>
 			<a href="setup.html">/setup</a>
-			<a href="index.html#projects">/projects</a>
+			<a href="#projects">/projects</a>
 			<div class="social"></div>
 			</nav>
 </div>
