--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@
 			<span> All rights reserved ©</span>
 			<span>
 			  Built and Designed by
-			  <a href="/">
-				<div class="name">hamza</div>
+			  <span class="name">hamza</span>
 		  </div>
 		  <nav class="nav">
 			<a href="#intro">/home</a>
