--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</h1>
 					<h2 class="intro-sub">i code and design things</h2>
 					<p class="intro-desc">
-						I want to be a computer science student based in the University of Calgary. I'm interested in full-stack development, with hopes of becoming a software engineer.
+						I want to be a computer science student based in the SAIT. I'm interested in full-stack development, with hopes of becoming a software developer.
 					</p>
 				</div>
 				
@@ -62,11 +62,11 @@
 					<p>Here are my Discord & video game names:</p>
 					<ul class="tech-stack" id="stack">
 						<li class="nickname" onclick="copyToClipboard('Spin6666')">
-						  <object data="/Images/SVG/Icons/Discord.svg" type="image/svg+xml" width="25" height="25"></object>
-						  <span>Spin6666</span>
+						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Discord.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <span>spinai</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin6666')">
-						  <object data="/Images/SVG/Icons/Fortnite.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Valorant.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>Spin6666</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin#6666')">
@@ -74,17 +74,17 @@
 						  <span>Spin#6666</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin#11668')">
-						  <object data="/Images/SVG/Icons/COD.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/COD.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>Spin#11668</span>
 						</li>
 						<li class="nickname-xero">
-						  <a href="https://xero.gg/player/spin">
-							<object data="/Images/icons/xero.png" width="30" height="10"></object>
-							<span>Spin</span>
+						  <a href="https://xero.gg/player/qits">
+							<object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Xero.webp" width="30" height="10"></object>
+							<span>Qits</span>
 						  </a>
 						</li>
 						<li class="nickname-steam">
-						  <a href="https://steamcommunity.com/id/Spin6666/">
+						  <a href="https://steamcommunity.com/id/Spiniq/">
 							<object data="/Images/SVG/Icons/Steam.svg" type="image/svg+xml" width="25" height="20"></object>
 							<span>Spin</span>
 						  </a>
@@ -94,7 +94,7 @@
 				<p></p>	
 				
 				<p>
-				  Outside of work I enjoy playing soccer, working out, watching anime & movies, and I also like playing
+				  Outside of work I enjoy playing soccer, working out, watching anime & movies, editing and I also enjoy playing
 				  video games!
 				</p>
 				<br>
@@ -124,7 +124,7 @@
 				</p>
 			  </div>
 			  <div class="baki">
-				<img src="/Images/pictures/baki.gif" alt="Picture of my favourite anime!">
+				<img src="/HTML&CSS/HamzaSharif/Images/pictures/baki.gif" alt="Picture of my favourite anime!">
 			  </div>
 			</div>
 		  </section>	
