--- a/setup.html
+++ b/setup.html
@@ -1,49 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="index.html">
+    <link rel="stylesheet" href="setup.css">
     <title>Setup</title>
     <link rel="icon" href="/Images/icons/Icon.png">
-  </head>
-  <body cz-shortcut-listen="true">
-  <section class="about-me" id="about">
+</head>
+<body cz-shortcut-listen="true">
+<section class="about-me" id="about">
     <h1>/Setup Links</h1>
-    <div id="thanks" class="container">
-      <div class="aboutdesc">
-        <p>These are all the links to most of the items in my setup</p>
-        <br>
-        <div class="items">
-          <a href="https://www.amazon.ca/gp/product/B09NP9BR5Z/ref=ppx_yo_dt_b_asin_title_o07_s00?ie=UTF8&psc=1">Monitor 1 - Center Monitor</a><br>
-          <a href="https://www.bestbuy.ca/en-ca/product/samsung-27-fhd-75hz-5ms-gtg-ips-led-freesync-gaming-monitor-lf27t350fhnxza-dark-blue-grey/14933348?source=search&asSlot=1">Monitor 2 - Side Monitor</a><br>
-          <a href="https://www.amazon.ca/gp/product/B07T5SY43L/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&psc=1">Monitor Stand</a><br>
-          <a href="https://www.amazon.ca/gp/product/B09H6Y3PRV/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Monitor Lamp</a><br>
-          
-          <a href="https://www.amazon.ca/gp/product/B0B17KX7FX/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&th=1">Keyboard</a><br>
-          <a href="https://www.amazon.ca/gp/product/B08FG4Q759/ref=ppx_yo_dt_b_asin_title_o05_s00?ie=UTF8&th=1">White Desk Mat</a><br>
-          <a href="https://www.amazon.ca/dp/B075F9KPQH?psc=1&ref=ppx_yo2ov_dt_b_product_details">Desk</a><br>
-          <a href="https://www.amazon.ca/Recliner-Computer-Footrest-Massage-Ergonomic/dp/B08R1F77KB/ref=sr_1_1?keywords=zeanus%2Bchair&qid=1672708366&sr=8-1&th=1">Chair </a><br>
-          <a href="https://www.amazon.ca/gp/product/B082G5SPR5/ref=ppx_yo_dt_b_asin_title_o02_s00?ie=UTF8&th=1">Mouse</a><br>
-          <a href="https://www.amazon.ca/TONOR-Microphone-Computer-Condenser-Studio/dp/B07WLWN2ZT/ref=sr_1_6?crid=3U85YFDYSA3EJ&keywords=microphone%2Btonor&qid=1694056507&sprefix=microphone%2Btonor%2Caps%2C131&sr=8-6&th=1">microphone </a><br>
-          <a href="https://www.amazon.ca/InnoGear-Microphone-Suspension-Scissor-Snowball/dp/B01L3LL95O/ref=sr_1_3?crid=3H26JX41DFDV8&keywords=innogear+microphone+arm&qid=1694056187&sprefix=innogear+microphone+arm%2Caps%2C127&sr=8-3">microphone arm</a><br>
-          <a href="https://ca.govee.com/collections/flash-deals/products/govee-glide-wall-light?variant=40521000321230">Govee Glide Lightbar</a><br>
-          <a href="https://www.apple.com/ipad-10.2/">Ipad 9th Gen - "I got first gen pen for it as well"</a><br>
-          <a href="https://gopro.com/en/ca/shop/cameras/hero11-black/CHDHX-111-master.html">GoPro 11Hero</a><br>
-          <a href="https://divoom.com/en-ca/products/pixoo-64"> Divoom</a><br>
-          <br>
-        </div>
-      </div>
+    <div class="setup-image-container">
+        <img src="/HTML&CSS/HamzaSharif/Images/pictures/dark.jpg" alt="My Setup" class="setup-image" data-index="0">
+        <img src="/HTML&CSS/HamzaSharif/Images/pictures/light.jpg" alt="My Setup Light" class="setup-image" data-index="1" style="display: none;">
     </div>
-  </section>  
-  <nav class="nav">
+    <div id="thanks" class="container">
+        <div class="aboutdesc">
+            <p>These are all the links to most of the items in my setup</p>
+            <br>
+            <div class="items">
+                <ul>
+                    <li><a href="https://www.amazon.ca/gp/product/B09NP9BR5Z/ref=ppx_yo_dt_b_asin_title_o07_s00?ie=UTF8&psc=1">Monitor 1 - Center Monitor</a></li>
+                    <li><a href="https://www.bestbuy.ca/en-ca/product/samsung-27-fhd-75hz-5ms-gtg-ips-led-freesync-gaming-monitor-lf27t350fhnxza-dark-blue-grey/14933348?source=search&asSlot=1">Monitor 2 - Side Monitor</a></li>
+                    <li><a href="https://www.amazon.ca/gp/product/B07T5SY43L/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&psc=1">Monitor Stand</a></li>
+                    <li><a href="https://www.amazon.ca/gp/product/B09H6Y3PRV/ref=ppx_yo_dt_b_asin_title_o00_s00?ie=UTF8&psc=1">Monitor Lamp</a></li>
+                    <li><a href="https://www.amazon.ca/gp/product/B0B17KX7FX/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&th=1">Keyboard + (Custom)</a></li>
+                    <li><a href="https://www.amazon.ca/gp/product/B08FG4Q759/ref=ppx_yo_dt_b_asin_title_o05_s00?ie=UTF8&th=1">White Desk Mat</a></li>
+                    <li><a href="https://www.razer.com/ca-en/gaming-mice/Razer-Viper-V2-Pro/RZ01-04390200-R3U1">Desk</a></li>
+                    <li><a href="https://www.amazon.ca/dp/B094HT24MM?ref_=cm_sw_r_cp_ud_dp_JGCF6FDYA59B9GHY50RD&th=1">Chair</a></li>
+                    <li><a href="https://www.razer.com/ca-en/gaming-mice/Razer-Viper-V2-Pro/RZ01-04390200-R3U1">Mouse</a></li>
+                    <li><a href="https://www.razer.com/ca-en/gaming-mice-accessories/Razer-HyperPolling-Wireless-Dongle/RC30-04410100-R3M1">HyperPolling Wireless</a></li>
+                    <li><a href="https://www.amazon.ca/TONOR-Microphone-Computer-Condenser-Studio/dp/B07WLWN2ZT/ref=sr_1_6?crid=3U85YFDYSA3EJ&keywords=microphone%2Btonor&qid=1694056507&sprefix=microphone%2Btonor%2Caps%2C131&sr=8-6&th=1">Microphone</a></li>
+                    <li><a href="https://www.amazon.ca/InnoGear-Microphone-Suspension-Scissor-Snowball/dp/B01L3LL95O/ref=sr_1_3?crid=3H26JX41DFDV8&keywords=innogear+microphone+arm&qid=1694056187&sprefix=innogear+microphone+arm%2Caps%2C127&sr=8-3">Microphone Arm</a></li>
+                    <li><a href="https://ca.govee.com/collections/flash-deals/products/govee-glide-wall-light?variant=40521000321230">Govee Glide Lightbar</a></li>
+                    <li><a href="https://www.apple.com/ipad-10.2/">Ipad 9th Gen - "I got first gen pen for it as well"</a></li>
+                    <li><a href="https://divoom.com/en-ca/products/pixoo-64">Divoom</a></li>
+                </ul>
+            </div>
+            
+        </div>
+    </div>
+</section>
+<nav class="nav">
     <a href="index.html#intro">/home</a>
     <a href="index.html#about">/about</a>
     <a href="setup.html">/setup</a>
     <a href="index.html#projects">/projects</a>
     <div class="social"></div>
-    </nav>
-  </body>
+</nav>
+<script>
+    const images = document.querySelectorAll(".setup-image");
+    let currentIndex = 0;
+
+    function showImage(index) {
+        images.forEach((img, idx) => {
+            img.style.display = idx === index ? "block" : "none";
+        });
+    }
+
+    function handleImageClick() {
+        currentIndex = (currentIndex + 1) % images.length; // Increment index
+        showImage(currentIndex);
+    }
+
+    images.forEach(image => {
+        image.addEventListener("click", handleImageClick); // Add click event to each image
+    });
+
+    // Initialize with the first image visible
+    showImage(currentIndex);
+
+    function checkZoomLevel() {
+        const zoomLevel = Math.round(window.devicePixelRatio * 100); // Get zoom level in percentage
+        if (zoomLevel >= 150) {
+            images.forEach(img => img.style.display = "none"); // Hide images
+        } else {
+            showImage(currentIndex); // Show the current image if zoom is less than 150%
+        }
+    }
+
+    // Check the zoom level on load
+    window.addEventListener("load", checkZoomLevel);
+
+    // Check the zoom level on resize
+    window.addEventListener("resize", checkZoomLevel);
+</script>
+</body>
 </html>
