--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				
 				<!-- SVG of a Man -->
 				<div class="man">
-					<object data="/Images/SVG/Asset/Man.svg" width="350" height="auto">
+					<object data="/HTML&CSS/HamzaSharif/Images/SVG/Asset/Man.svg" width="350" height="auto">
 						<svg width="565.94" height="625.01">
 						</svg>
 					</object>
@@ -65,12 +65,12 @@
 						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Discord.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>spinai</span>
 						</li>
-						<li class="nickname" onclick="copyToClipboard('Spin6666')">
-						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Valorant.svg" type="image/svg+xml" width="25" height="25"></object>
-						  <span>Spin6666</span>
+						<li class="nickname" onclick="copyToClipboard('Spinai')">
+						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Fortnite.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <span>Spinai</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin#6666')">
-						  <object data="/Images/SVG/Icons/Valorant.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Valorant.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>Spin#6666</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin#11668')">
@@ -85,7 +85,7 @@
 						</li>
 						<li class="nickname-steam">
 						  <a href="https://steamcommunity.com/id/Spiniq/">
-							<object data="/Images/SVG/Icons/Steam.svg" type="image/svg+xml" width="25" height="20"></object>
+							<object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Steam.svg" type="image/svg+xml" width="25" height="20"></object>
 							<span>Spin</span>
 						  </a>
 						</li>
