fixing the web 20-24-11-03

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				
 				<!-- SVG of a Man -->
 				<div class="man">
-					<object data="/HTML&CSS/HamzaSharif/Images/SVG/Asset/Man.svg" width="350" height="auto">
+					<object data="/Images/SVG/Asset/Man.svg" width="350" height="auto">
 						<svg width="565.94" height="625.01">
 						</svg>
 					</object>
@@ -62,30 +62,30 @@
 					<p>Here are my Discord & video game names:</p>
 					<ul class="tech-stack" id="stack">
 						<li class="nickname" onclick="copyToClipboard('Spin6666')">
-						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Discord.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/Images/SVG/Icons/Discord.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>spinai</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spinai')">
-						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Fortnite.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/Images/SVG/Icons/Fortnite.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>Spinai</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin#6666')">
-						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Valorant.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/Images/SVG/Icons/Valorant.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>Spin#6666</span>
 						</li>
 						<li class="nickname" onclick="copyToClipboard('Spin#11668')">
-						  <object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/COD.svg" type="image/svg+xml" width="25" height="25"></object>
+						  <object data="/Images/SVG/Icons/COD.svg" type="image/svg+xml" width="25" height="25"></object>
 						  <span>Spin#11668</span>
 						</li>
 						<li class="nickname-xero">
 						  <a href="https://xero.gg/player/qits">
-							<object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Xero.webp" width="30" height="10"></object>
+							<object data="/Images/SVG/Icons/Xero.webp" width="30" height="10"></object>
 							<span>Qits</span>
 						  </a>
 						</li>
 						<li class="nickname-steam">
 						  <a href="https://steamcommunity.com/id/Spiniq/">
-							<object data="/HTML&CSS/HamzaSharif/Images/SVG/Icons/Steam.svg" type="image/svg+xml" width="25" height="20"></object>
+							<object data="/Images/SVG/Icons/Steam.svg" type="image/svg+xml" width="25" height="20"></object>
 							<span>Spin</span>
 						  </a>
 						</li>
@@ -124,7 +124,7 @@
 				</p>
 			  </div>
 			  <div class="baki">
-				<img src="/HTML&CSS/HamzaSharif/Images/pictures/baki.gif" alt="Picture of my favourite anime!">
+				<img src="/Images/pictures/baki.gif" alt="Picture of my favourite anime!">
 			  </div>
 			</div>
 		  </section>	
