--- a/setup.html
+++ b/setup.html
@@ -12,8 +12,8 @@
 <section class="about-me" id="about">
     <h1>/Setup Links</h1>
     <div class="setup-image-container">
-        <img src="/HTML&CSS/HamzaSharif/Images/pictures/dark.jpg" alt="My Setup" class="setup-image" data-index="0">
-        <img src="/HTML&CSS/HamzaSharif/Images/pictures/light.jpg" alt="My Setup Light" class="setup-image" data-index="1" style="display: none;">
+        <img src="/Images/pictures/dark.jpg" alt="My Setup" class="setup-image" data-index="0">
+        <img src="/Images/pictures/light.jpg" alt="My Setup Light" class="setup-image" data-index="1" style="display: none;">
     </div>
     <div id="thanks" class="container">
         <div class="aboutdesc">
