--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					</h1>
 					<h2 class="intro-sub">i code and design things</h2>
 					<p class="intro-desc">
-						I want to be a computer science student based in the SAIT. I'm interested in full-stack development, with hopes of becoming a software developer.
+						I want to be a software developer student based in the SAIT. I'm interested in full-stack development, with hopes of becoming a software developer.
 					</p>
 				</div>
 				
