--- a/profile/profile.html
+++ b/profile/profile.html
@@ -10,43 +10,52 @@
 <body>
   <div class="everything"></div>
   <section>
-    <!-- head page-->
+    <!-- Head Page -->
     <div class="profile-container">
+      <!-- Profile Image -->
       <div class="profile-image">
         <svg class="uniteddb-icon" fill="#a0abbae0" xmlns="http://www.w3.org/2000/svg" width="10" height="17" viewBox="0 0 448 512">
           <defs>
-            <style>.fa-secondary{opacity:.4}</style>
+            <style>.fa-secondary { opacity: .4; }</style>
           </defs>
           <path class="fa-primary" d="M274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"></path>
           <path class="fa-secondary" d="M352 128c0 70.69-57.3 128-128 128C153.3 256 96 198.7 96 128s57.31-128 128-128C294.7 0 352 57.31 352 128z"></path>
-        </svg>      
-    </div>
+        </svg>
+      </div>
+  
       <!-- Name -->
-    <span class="name">Hamza</span>
+      <span class="name">Hamza</span>
+  
+      <!-- Owner SVG -->
       <div class="Owner-svg">
         <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 18 18" class="name-icon">
           <path fill="#faa61a" d="M 13.6572 5.42868 C 13.8879 5.29002 14.1806 5.30402 14.3973 5.46468 C 14.6133 5.62602 14.7119 5.90068 14.6473 6.16202 L 13.3139 11.4954 C 13.2393 11.7927 12.9726 12.0007 12.6666 12.0007 H 3.33325 C 3.02725 12.0007 2.76058 11.792 2.68592 11.4954 L 1.35258 6.16202 C 1.28792 5.90068 1.38658 5.62602 1.60258 5.46468 C 1.81992 5.30468 2.11192 5.29068 2.34325 5.42868 L 5.13192 7.10202 L 7.44592 3.63068 C 7.46173 3.60697 7.48377 3.5913 7.50588 3.57559 C 7.5192 3.56612 7.53255 3.55663 7.54458 3.54535 L 6.90258 2.90268 C 6.77325 2.77335 6.77325 2.56068 6.90258 2.43135 L 7.76458 1.56935 C 7.89392 1.44002 8.10658 1.44002 8.23592 1.56935 L 9.09792 2.43135 C 9.22725 2.56068 9.22725 2.77335 9.09792 2.90268 L 8.45592 3.54535 C 8.46794 3.55686 8.48154 3.56651 8.49516 3.57618 C 8.51703 3.5917 8.53897 3.60727 8.55458 3.63068 L 10.8686 7.10202 L 13.6572 5.42868 Z M 2.66667 12.6673 H 13.3333 V 14.0007 H 2.66667 V 12.6673 Z"></path>
-        </svg>      
+        </svg>
         <span class="Owner-text">Owner</span>
       </div>
-
-      <span class="job-position">Software Developer</span>
-       <div class="code-svg">
-         <svg class="uniteddb-icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
-           <defs>
-             <style>
-              .fa-secondary {
-                opacity: .4;
-              }
-             </style>
-           </defs>
-           <path class="fa-primary" d="M518.6 121.4L630.6 233.4C643.1 245.9 643.1 266.1 630.6 278.6L518.6 390.6C506.1 403.1 485.9 403.1 473.4 390.6C460.9 378.1 460.9 357.9 473.4 345.4L562.7 256L473.4 166.6C460.9 154.1 460.9 133.9 473.4 121.4C485.9 108.9 506.1 108.9 518.6 121.4V121.4zM166.6 166.6L77.25 256L166.6 345.4C179.1 357.9 179.1 378.1 166.6 390.6C154.1 403.1 133.9 403.1 121.4 390.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4L121.4 121.4C133.9 108.9 154.1 108.9 166.6 121.4C179.1 133.9 179.1 154.1 166.6 166.6V166.6z"></path>
-           <path class="fa-secondary" d="M414.8 40.79L286.8 488.8C281.9 505.8 264.2 515.6 247.2 510.8C230.2 505.9 220.4 488.2 225.2 471.2L353.2 23.21C358.1 6.216 375.8-3.624 392.8 1.232C409.8 6.087 419.6 23.8 414.8 40.79z"></path>
-         </svg>      
-      </div>
-  </section>
   
-</div>
+      <!-- Job Position -->
+      <span class="job-position">Software Developer</span>
+  
+      <!-- Code SVG -->
+      <div class="code-svg">
+        <svg class="uniteddb-icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+          <defs>
+            <style>.fa-secondary { opacity: .4; }</style>
+          </defs>
+          <path class="fa-primary" d="M518.6 121.4L630.6 233.4C643.1 245.9 643.1 266.1 630.6 278.6L518.6 390.6C506.1 403.1 485.9 403.1 473.4 390.6C460.9 378.1 460.9 357.9 473.4 345.4L562.7 256L473.4 166.6C460.9 154.1 460.9 133.9 473.4 121.4C485.9 108.9 506.1 108.9 518.6 121.4V121.4zM166.6 166.6L77.25 256L166.6 345.4C179.1 357.9 179.1 378.1 166.6 390.6C154.1 403.1 133.9 403.1 121.4 390.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4L121.4 121.4C133.9 108.9 154.1 108.9 166.6 121.4C179.1 133.9 179.1 154.1 166.6 166.6V166.6z"></path>
+          <path class="fa-secondary" d="M414.8 40.79L286.8 488.8C281.9 505.8 264.2 515.6 247.2 510.8C230.2 505.9 220.4 488.2 225.2 471.2L353.2 23.21C358.1 6.216 375.8-3.624 392.8 1.232C409.8 6.087 419.6 23.8 414.8 40.79z"></path>
+        </svg>
+        <br>
+      </div>
+    </div>
+  </section>
+  <br>
+  <hr>
+  
+<section>
+  
+</section>
 </body>
 </html>
 
